bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__status_widget_active.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› Ask Chaos to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
