bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__unified_exec_non_empty_then_empty_active.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
