bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__unified_exec_non_empty_then_empty_after.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · just fix
  └ pwd

• Waited for background terminal · just fix
