bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · cargo test -p chaos-kern

• Final response.
