bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__user_shell_ls_output.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: blob
---
• You ran ls
  └ file1
    file2
